tests/fixtures/invalid/pow_int_bytes_list.py
# Cannot call pow() with Int, Bytes, List[int]
x = pow(1, b"hello", [1, 2, 3])
